   * See also NetBSD changelog:
	http://cvsweb.netbsd.org/bsdweb.cgi/src/lib/libedit

2014-02-13 Jess Thrysoee

   * version-info: 0:48:0

   * all: sync with upstream source.

   * examples/fileman.c: Fix typo. Patch by Kamil Dudka.

   * Makefile.am, configure.ac: Add --enable-examples configure parameter.
	Make it possible to enable/disable building of the examples programs.
	Patch by James Le Cuirot.

2013-07-12 Jess Thrysoee

   * version-info: 0:47:0

   * all: sync with upstream source.

   * examples/fileman.c, examples/tc1.c: fix pedantic compiler warnings

2013-07-10 Jess Thrysoee

   * version-info: 0:46:0

   * configure.ac, src/el.c: ~/.editrc was never sourced on Linux.
	On Linux issetugid is not available. When unable to determine if
	the current process is tainted, we did not trust the HOME environment
	variable and therefore could not load ~/.editrc.
	Now instead use secure_getenv or a issetugid based implementation of secure_getenv.
	Patch by Paolo Tosco.

2013-06-11 Jess Thrysoee

   * version-info: 0:45:0

   * configure.ac: fix AM_CONDITIONAL regression for strlcpy, strlcat, vis,
	unvis checks.

2013-06-08 Jess Thrysoee

   * version-info: 0:44:0

   * configure.ac, src/Makefile.am: Prevent 'ranlib: has no symbols' build
	warnings for systems that has strlcpy, strlcat, vis, unvis.

2013-06-01 Jess Thrysoee

   * version-info: 0:43:0

   * all: sync with upstream source.

2012-12-13 Jess Thrysoee

   * version-info: 0:42:0

   * all: sync with upstream source.

2012-06-01 Jess Thrysoee

   * version-info: 0:41:0

   * all: sync with upstream source.

2012-05-22 Jess Thrysoee

   * version-info: 0:40:0

   * all: sync with upstream source.

2012-03-11 Jess Thrysoee

   * version-info: 0:39:0

   * all: sync with upstream source.

2011-08-02 Jess Thrysoee

   * version-info: 0:38:0

   * all: sync with upstream source.

2011-07-09 Jess Thrysoee

   * version-info: 0:37:0

   * all: sync with upstream source.

2011-02-27 Jess Thrysoee
