@@ -1,4 +1,4 @@
-/*	$NetBSD: chared.h,v 1.21 2010/08/28 15:44:59 christos Exp $	*/
+/*	$NetBSD: chared.h,v 1.22 2014/06/18 18:12:28 christos Exp $	*/
 
 /*-
  * Copyright (c) 1992, 1993
@@ -104,6 +104,7 @@ typedef struct c_kill_t {
 } c_kill_t;
 
 typedef void (*el_zfunc_t)(EditLine *, void *);
+typedef const char *(*el_afunc_t)(void *, const char *);
 
 /*
  * Note that we use both data structures because the user can bind
@@ -116,7 +117,9 @@ typedef struct el_chared_t {
 	c_vcmd_t	c_vcmd;
 	c_macro_t	c_macro;
 	el_zfunc_t	c_resizefun;
+	el_afunc_t	c_aliasfun;
 	void *		c_resizearg;
+	void *		c_aliasarg;
 } el_chared_t;
 
 
@@ -165,6 +168,7 @@ protected int	 c_hpos(EditLine *);
 protected int	 ch_init(EditLine *);
 protected void	 ch_reset(EditLine *, int);
 protected int	 ch_resizefun(EditLine *, el_zfunc_t, void *);
+protected int	 ch_aliasfun(EditLine *, el_afunc_t, void *);
 protected int	 ch_enlargebufs(EditLine *, size_t);
 protected void	 ch_end(EditLine *);
 
