@@ -1,4 +1,4 @@
-/*	$NetBSD: el.c,v 1.72 2013/01/22 20:23:21 christos Exp $	*/
+/*	$NetBSD: el.c,v 1.73 2014/06/18 18:12:28 christos Exp $	*/
 
 /*-
  * Copyright (c) 1992, 1993
@@ -37,7 +37,7 @@
 #if 0
 static char sccsid[] = "@(#)el.c	8.2 (Berkeley) 1/3/94";
 #else
-__RCSID("$NetBSD: el.c,v 1.72 2013/01/22 20:23:21 christos Exp $");
+__RCSID("$NetBSD: el.c,v 1.73 2014/06/18 18:12:28 christos Exp $");
 #endif
 #endif /* not lint && not SCCSID */
 
@@ -218,6 +218,13 @@ FUN(el,set)(EditLine *el, int op, ...)
 		el_zfunc_t p = va_arg(ap, el_zfunc_t);
 		void *arg = va_arg(ap, void *);
 		rv = ch_resizefun(el, p, arg);
+		break;
+	}
+
+	case EL_ALIAS_TEXT: {
+		el_afunc_t p = va_arg(ap, el_afunc_t);
+		void *arg = va_arg(ap, void *);
+		rv = ch_aliasfun(el, p, arg);
 		break;
 	}
 
