@@ -1,6 +1,18 @@
    * See also NetBSD changelog:
 	http://cvsweb.netbsd.org/bsdweb.cgi/src/lib/libedit
 
+2014-06-18 Jess Thrysoee
+
+   * version-info: 0:50:0
+
+   * all: sync with upstream source - add weak alias patches
+
+2014-06-18 Jess Thrysoee
+
+   * version-info: 0:49:0
+
+   * all: sync with upstream source.
+
 2014-02-13 Jess Thrysoee
 
    * version-info: 0:48:0
